--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ ILive/DDP.Common.Mvx.Droid/Resources/Resource.designer.cs
 # MacOS Finder files
 .DS_Store
 Resource.designer.cs
+
+# NetBeans IDE Project
+[Bb]uild/
+build.xml
