--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,13 @@ dist.jar=${dist.dir}/PacketVideoConverter.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.SynchronizingDirectories.jar=C:\\JAVA\\MyProj\\SynchronizingDirectories\\dist\\SynchronizingDirectories.jar
+file.reference.swing-layout-1.0.4.jar=lib/swing-layout-1.0.4.jar
+file.reference.SynchronizingDirectories.jar=lib/SynchronizingDirectories.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.SynchronizingDirectories.jar}:\
-    ${libs.swing-layout.classpath}
+    ${file.reference.swing-layout-1.0.4.jar}:\
+    ${file.reference.SynchronizingDirectories.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint
 javac.deprecation=false
@@ -59,6 +60,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -67,6 +69,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=PacketVideoConverter
 main.class=packetvideoconverter.PacketVC
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
